<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_playlists_avctivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructure.PlaylistsAvctivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/search"
            style="@style/menu"
            android:text="@string/menu_1" />

        <TextView
            android:id="@+id/artists"
            style="@style/menu"
            android:background="@color/colorLightNav"
            android:text="@string/menu_2" />

        <TextView
            android:id="@+id/albums"
            style="@style/menu"
            android:text="@string/menu_3" />

        <TextView
            android:id="@+id/songs"
            style="@style/menu"
            android:background="@color/colorLightNav"
            android:text="@string/menu_4" />

        <TextView
            android:id="@+id/playlists"
            style="@style/menu"
            android:text="@string/menu_5"
            android:textColor="@color/highlight" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginBottom="@dimen/card_bottom_margin">

        <TextView
            style="@style/descrption"
            android:text="@string/description_playlists" />

    </android.support.v7.widget.CardView>

</LinearLayout>
